began coding homepage and creating redux store

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Menubile",
+  "name": "Menuable",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
@@ -19,7 +19,7 @@
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/stevenseb/Menubile.git"
+    "url": "git+https://github.com/stevenseb/Menuable.git"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -39,7 +39,13 @@
     "sequelize-cli": "^6.6.2"
   },
   "devDependencies": {
+    "@eslint/compat": "^1.1.0",
+    "@eslint/js": "^9.4.0",
     "dotenv-cli": "^7.4.1",
+    "eslint": "^8.0.0",
+    "eslint-plugin-react": "^7.34.2",
+    "globals": "^15.4.0",
+    "mkdirp": "^3.0.1",
     "nodemon": "^3.1.0",
     "sqlite3": "^5.1.7"
   }
